fixing occasional bug where overlaps persist after edit mode when mouse on drawing when entering view mode

--- a/StereoSketcher/StereoSketcher.css
+++ b/StereoSketcher/StereoSketcher.css
@@ -38,11 +38,10 @@ html, body, svg
 
 .loading
 {
-	position: absolute; 
+	position: absolute;
 	bottom:50%;
 	right:50%;
 	z-index:9999;
-	padding:60px;
 }
 
 .hidden
